# OJLIBS

./: .clang_complete  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO
inc/ojlibs/: 2sat.hpp  ac_automaton.hpp  aca-old.hpp  all.hpp  arith.hpp  arithmatic.hpp  attr.hpp  bignum.hpp  bignum_arith.inc  bignum_conv.inc  binary_operator.hpp  binary_search.hpp  bit_trick.hpp  bitree.hpp  bst.hpp  closest_point_pair.hpp  comparable.hpp  counting.hpp  crt.hpp  data_structure.hpp  dfs_tree.hpp  dijkstra.hpp  dinic.hpp  dir.hpp  disjoint_set.hpp  fast_io.hpp  fio.inc  geometry-old.hpp  geometry.hpp  graph.hpp  hamilton.hpp  hash.hpp  hungarian-old.hpp  hungarian.hpp  hungarian_short.hpp  implicit_segtree.hpp  index_range.hpp  int_range.hpp  intervals.hpp  intrusive_util.hpp  (+40 more)
inc/ojlibs/algebra/: base.hpp  complex.hpp  matrix.hpp  modular.hpp  polynomial.hpp  power.hpp
inc/ojlibs/arith/: arith.hpp  counting.hpp  crt.hpp  prime_list.hpp
inc/ojlibs/bignum/: bignum.hpp  bignum_arith.inc  bignum_conv.inc
inc/ojlibs/csr/: bellman.hpp  csr.hpp  dfs.hpp  dijkstra.hpp  graph.hpp
inc/ojlibs/dense/: hamilton.hpp  hungarian.hpp  hungarian_short.hpp  max_clique.hpp
inc/ojlibs/deprecated/: 2sat.hpp  binary_operator.hpp  dfs_iterative.hpp  empty_type.hpp  graph.hpp  identity_visitor.hpp  int_range.hpp  scc.hpp  scc_kosaraju.hpp  scc_tarjan.hpp
inc/ojlibs/draft/: ebst.hpp  game_theory.hpp  vector.hpp
inc/ojlibs/ds/: bitree.hpp  bst.hpp  disjoint_set.hpp  implicit_segtree.hpp  lazy_segtree.hpp  list.hpp  ordered_tree.hpp  rb_tree.hpp  segtree.hpp  segtree2d.hpp  sized_splay.hpp  slist.hpp  sparse_table.hpp
inc/ojlibs/geometry/: closest_point_pair.hpp  geometry.hpp
inc/ojlibs/misc/: intervals.hpp  (+4 more)
misc/: FWT.cpp  cg_ddf.cpp  fft.hpp  fio.cpp  gen_random_tree.py  mat2.hpp  mod_int.hpp  no_adjacent.cpp  oh_you_find_it.txt  oh_you_find_it2.txt  sliding_window_maximum.cpp
notes/: about_performance  counting.md  game_theory.md
python/: main.py  problem.py  util.py
snippet/all/: graph.snippets  ojlibs.snippets  segtree.snippets
src/: CMakeLists.txt  check.sh  interactive.sh  pell-equation-euler066.py
src/data_structure/: list.cpp  slist.cpp
src/dropbox/: matrix.hpp
template/: Makefile  main.cpp
test/: 2sat_test.cpp  CMakeLists.txt  arith_test.cpp  bench_test.cpp  bignum_test.cpp  binary_search_test.cpp  bitree_test.cpp  counting_test.cpp  csr_test.cpp  digit_dc_test.cpp  dinic_hugarian_test.cpp  disjoint_set_test.cpp  fft_test.cpp  fio_test.cpp  generic_dfs_test.cpp  geometry_test.cpp  graph_test.cpp  hamilton_test.cpp  hash_test.cpp  hello_test.cpp  implicit_segtree_test.cpp  itree_test.cpp  lazy_segtree_test.cpp  linear_test.cpp  list_test.cpp  matrix_test.cpp  memoization_test.cpp  memorization_test.cpp  mobius_inversion_test.cpp  mod_int_test.cpp  mst_test.cpp  network_flow_test.cpp  ntt_test.cpp  ordered_tree_test.cpp  power_test.cpp  preorder_test.cpp  prime_list_test.cpp  prufer_test.cpp  rbtree_test.cpp  scc_test.cpp  (+15 more)
tools/: CMakeLists.txt  check.sh  edit_tc  interactive.sh  ojlibs_cpp  test.cpp
tools/cf_test_crawler/: index.js  package.json
(+37 files in other folders)
